--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -1,3 +1,3 @@
-<p>Mensaje recibido: {{mensajeRecibido}}</p>
+<!-- <p>Mensaje recibido: {{mensajeRecibido}}</p> -->
 
 <button (click)="enviarTextoAPadre ('enviando')">Enviar texto al componente PADRE</button>
